# nasa-space-apps-challenge

./: .gitignore  Exo_Hunter.ipynb  FINAL_OUTPUT_USAGE.md  README.md  convert_to_standard_format.py  exoplanet_candidates.py  exoplanet_false_positives.py  generate_final_output.py  main.py  pyproject.toml  run_all.py  test_final_output.py
data/: all_candidates_standard.csv  all_false_positives_standard.csv  final_output.csv  kepler_candidates.csv  kepler_candidates_standard.csv  kepler_false_positives_standard.csv  tess_candidates.csv  tess_candidates_standard.csv  tess_false_positives.csv  tess_false_positives_standard.csv
data/test_data/: candidate_predictions_lgb.csv  exoplanets_vs_false_positives.csv
exoplanet-dashboard/: package-lock.json  package.json
exoplanet-dashboard/src/: App.js  index.css
tests/: script.py  test.py  test_lk.py  vdb.py
